--- a/.github/workflows/build-web-optimized.yml
+++ b/.github/workflows/build-web-optimized.yml
@@ -1,4 +1,4 @@
-name: Build and Push Worker Image
+name: Build and Push Web Image (Optimized)
 
 on:
   push:
@@ -21,11 +21,12 @@ on:
 env:
   REGISTRY: ${{ vars.ALI_REGISTRY || 'registry.cn-hangzhou.aliyuncs.com' }}
   NAMESPACE: ${{ vars.ALI_NAMESPACE || 'langfuse' }}
-  IMAGE_NAME: worker
+  IMAGE_NAME: web
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    timeout-minutes: 45  # 设置超时，避免无限等待
     
     steps:
     - name: Checkout code
@@ -57,8 +58,12 @@ jobs:
         echo "Commit ID: $COMMIT_ID"
         echo "Image Tag: ${VERSION}-${COMMIT_ID}"
 
+    # 🚀 优化点1: 提前设置Docker Buildx和登录，减少后续等待时间
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+      with:
+        driver-opts: network=host
+        buildkitd-flags: --allow-insecure-entitlement security.insecure --allow-insecure-entitlement network.host
 
     - name: Login to Alibaba Cloud Container Registry
       uses: docker/login-action@v3
@@ -67,18 +72,61 @@ jobs:
         username: ${{ secrets.ALI_REGISTRY_USERNAME }}
         password: ${{ secrets.ALI_REGISTRY_PASSWORD }}
 
+    # 🚀 优化点2: 更激进的磁盘清理
+    - name: Free up disk space
+      run: |
+        # 清理系统包缓存
+        sudo apt-get clean
+        sudo apt-get autoremove -y
+        
+        # 清理大型工具链
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /opt/ghc
+        sudo rm -rf /opt/hostedtoolcache/CodeQL
+        sudo rm -rf /opt/hostedtoolcache/go
+        sudo rm -rf /opt/hostedtoolcache/Python
+        sudo rm -rf /usr/local/share/boost
+        sudo rm -rf /usr/local/lib/node_modules
+        
+        # 清理Docker
+        sudo docker system prune -af --volumes
+        
+        # 显示剩余空间
+        df -h
+
+    # 🚀 优化点3: 使用多层缓存策略
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: ./worker/Dockerfile
+        file: ./web/Dockerfile
         push: true
         tags: |
           ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.image_tag }}
           ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE_NAME }}:latest
-        platforms: linux/amd64,linux/arm64
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        platforms: linux/amd64  # 🚀 优化点4: 只构建amd64，减少构建时间
+        
+        # 🚀 优化点5: 多层缓存策略
+        cache-from: |
+          type=gha
+          type=registry,ref=${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE_NAME }}:cache
+        cache-to: |
+          type=gha,mode=max
+          type=registry,ref=${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE_NAME }}:cache,mode=max
+        
+        build-args: |
+          NEXT_PUBLIC_BUILD_ID=${{ steps.version.outputs.image_tag }}
+          BUILDKIT_INLINE_CACHE=1
+        
+        # 🚀 优化点6: 禁用证明和SBOM生成，加速构建
+        provenance: false
+        sbom: false
+        outputs: type=registry
+        
+        # 🚀 优化点7: 启用内联缓存和压缩
+        build-contexts: |
+          alpine=docker-image://node:20-alpine
 
     - name: Output image info
       run: |
@@ -92,3 +140,4 @@ jobs:
         echo "- 版本号: \`${{ steps.version.outputs.version }}\`" >> $GITHUB_STEP_SUMMARY
         echo "- 提交ID: \`${{ steps.version.outputs.commit_id }}\`" >> $GITHUB_STEP_SUMMARY
         echo "- 分支: \`${{ github.event.inputs.branch || github.ref_name }}\`" >> $GITHUB_STEP_SUMMARY
+        echo "- 构建平台: linux/amd64 only (优化版本)" >> $GITHUB_STEP_SUMMARY
